minor bugs linke font font size issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body{
 }
 
 .bottom{
-    font-size: 2vmax;
+    font-size: 1vmax;
     opacity: .5;
 }
 
